crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: `seeds` or `seeded` are already defined.
  --> tests/constraints/init_seeds_keys.fail.rs:33:9
   |
33 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
